<resources>
    <string name="app_name">Girl-Scout-Cookies</string>
    <string name="see_map_button">See an existing map</string>
    <string name="create_map_button">Create a new map</string>

    <string name="cancel">Cancel</string>
    <string name="save">Save</string>

    <string name="enter">Enter</string>
    <string name="submit">Submit</string>
    <string name="delete">Delete</string>
    <string name="help">Help</string>
    <string name="update">Update</string>

    <string name="settings">Settings</string>
    <string name="enter_map_code">Enter the code of your map</string>
    <string name="enter_new_code">Enter a new code for your map</string>
    <string name="error_existing_code">The map code you entered already exists. Please try again with another code.</string>
    <string name="title_activity_test_maps">TestMapsActivity</string>
    <string name="title_activity_fill_map">FillMap</string>
    <string name="enter_address">Enter new address</string>
    <string name="error_finding_address">Could not find this address, please be more specific</string>
    <string name="user">Username:</string>
    <string name="ip">IP-address:</string>
    <string name="database">Database name:</string>
    <string name="pass">Password:</string>
    <string name="create_db_tables">Create tables for database</string>
    <string name="not_existing_map">There is no map with this code, please enter the code of an existing map.</string>

    <string name="info"><b>Instructions on how to use this app:</b>\n\nFirst click on Settings, fill out the information for your database and press on \'Update\'.\nIf this is the first time you use this database, go back to the settings and click on \'Create tables for database\' to prepare the database for usage.\nThen click in the main menu on \'Create a new map\' to create a new map, or on \'See an existing map\' if you already created a map and want to see that map.\nThen type in a new code for creating a new map or an existing code for seeing an existing map. Then click on \'Enter\'.\nThat will bring you to the map.\nYou can navigate through the map by dragging it around. You can zoom in by double clicking. You can also zoom by double clicking and then holding the second click and then dragging back and forth to zoom in and out.\nTo mark a house on the map:\n1) Type in the address and click on \'Enter\'.\n2) Select the color to mark the house with and click on \'Save\'.\nYou can delete such a mark by clicking on it and then on \'Delete\'. When you are finished, click on \'Submit\' to store the changes in the database.\n\nIn case you couldn\'t find your answer on our help page or in the installation instructions, please send an e-mail to: eskil.dam@ru.nl</string>
</resources>
